<resources>
    <string name="app_name">Room.me</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="notices">Notices</string>
    <string name="spending">Spending</string>
    <string name="settings">Settings</string>
    <string name="notice_title_placeholder_text">Notice Title $1</string>
    <string name="notice_item_date_placeholder">October 3rd, 2016</string>
    <string name="details_2">Details $2! Lorem ipsum test string. More details on the
                            notice can be found here! The notify button below is for
                            messaging your roommates. The edit button is for update the
                            notice title, details, and target date!</string>
    <string name="notice_notify_button">Notify</string>
    <string name="notice_edit_button_text">Edit</string>
    <string name="notice_datetime_now">Now!</string>
    <string name="notice_list_transition_name">noticelistanimation</string>
    <string name="delete_notice_dialog_title">Delete Notice?</string>
    <string name="delete_notice_dialog_message">Are you sure you wish to delete this notice? This will be removed permanently.</string>
    <string name="delete_notice_dialog_no">No</string>
    <string name="delete_notice_dialog_yes">Yes</string>
</resources>
