<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_marginLeft="@dimen/notice_title_margins"
        android:layout_marginRight="@dimen/notice_title_margins"
        android:layout_marginBottom="@dimen/notice_title_margins"
            android:background="@color/cardview_light_background"
            android:id="@+id/item_notice_cardview"
            android:layout_width="match_parent"
            card_view:cardCornerRadius="@dimen/card_corner_radius"
            android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_margin="@dimen/notice_title_margins"
                android:textSize="@dimen/notice_title_size"
                android:textColor="@android:color/black"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/item_notice_title"
                android:text="@string/notice_title_placeholder_text"/>


            <TextView
                android:id="@+id/item_notice_pdate"
                android:textColor="@color/colorSecondText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/notice_date_bot_margin"
                android:textSize="@dimen/notice_date_text_size"
                android:text="@string/notice_item_date_placeholder"
                android:layout_alignTop="@id/item_notice_title"
                android:layout_marginRight="@dimen/notice_title_margins"
                android:layout_alignParentRight="true"/>
            <TextView
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:id="@+id/item_notice_details"
                android:layout_below="@id/item_notice_title"
                android:layout_alignLeft="@id/item_notice_title"
                android:layout_alignRight="@id/item_notice_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/details_2"/>
            <View
                android:layout_below="@id/item_notice_details"
                android:background="@color/colorDivider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginLeft="@dimen/divider_width_margins"
                android:layout_marginRight="@dimen/divider_width_margins"
                android:layout_marginTop="@dimen/divider_width_margins"
                android:id="@+id/item_notice_divider"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignRight="@id/item_notice_divider"
                android:layout_alignLeft="@id/item_notice_divider"
                android:layout_below="@id/item_notice_divider"
                android:gravity="right">
                    <!-- Set visibility to GONE if on main activity -->
                    <Button
                        android:id="@+id/item_notice_notify_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                        android:text="@string/notice_notify_button"/>
                    <Button
                        android:id="@+id/item_notice_edit_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                        android:text="@string/notice_edit_button_text"/>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>




</LinearLayout>